policy typos and tweaking

--- a/app/views/static_pages/policies.html.erb
+++ b/app/views/static_pages/policies.html.erb
@@ -16,13 +16,13 @@ that may be made available to the public.</p>
 <a id="terms"></a><h2>Terms of Use</h2>
 <h3>Study authors</h3>
 <p>Users creating content on StreetSeen agree to the following:</p>
-<ul><li>Content created via the StreetSeen application (including study questions, image sets and survey results) 
+<ul><li>Content created via the StreetSeen application (including study questions, image sets and public study results) 
 is available for reuse by the public under the <a href="http://creativecommons.org/licenses/by-nc/3.0/deed.en_US">Creative Commons 
 Attribution-NonCommercial 3.0 Unported</a> license.</li>
 <li>StreetSeen will abide by the Privacy Policy listed above in the creation and deletion of accounts.</li>
 <li>Studies which are "launched" will be available for public viewing and voting.</li>
 <li>Users will not harrass or intimidate other users via activities on StreetSeen.</li>
-<li>Users will not post or add content to a study that is illeggal, profane, obscene, vulgar, sexist, racist, or 
+<li>Users will not post or add content to a study that is illegal, profane, obscene, vulgar, sexist, racist, or 
 discriminatory.</li></ul>
 
 <p>Any study author who violates any of the policies listed above may have their account suspended.</p>
@@ -31,6 +31,6 @@ discriminatory.</li></ul>
 <p>Users participating in a study by voting on images agree to the following:</p>
 <ul><li>Voting results are available for reuse by the public under the <a href="http://creativecommons.org/licenses/by-nc/3.0/deed.en_US">Creative Commons Attribution-NonCommercial 3.0 Unported</a> license.</li>
 <li>StreetSeen will collect certain geographical data about the location of the computer used to cast each vote.
-These data will be avilable along with the oting results.</li></ul>
+These data will be avilable along with the voting results.</li></ul>
 
-<p>Users who do not agree to the terms above should refrain from participating in any studies on StreetSeen</p>
+<p>Users who do not agree to the terms above should refrain from participating in any studies on StreetSeen.</p>
