hover for drop down (text only) and a little more help text.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -56,6 +56,14 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   color: $darkgray;
   }
 
+.navbar .nav li.dropdown.open > .dropdown-toggle, .navbar .nav li.dropdown.active > .dropdown-toggle, .navbar .nav li.dropdown.open.active > .dropdown-toggle {
+  color: $darkgray;
+  }
+  
+.navbar .nav li.dropdown > a:hover .caret, .navbar .nav li.dropdown > a:focus .caret {
+  color: $darkgray;
+  }
+
 .label-important {
     background-color: $darkred;
 }
