--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,14 +1,15 @@
 <h1>Help</h1>
+
 <h3>Create a User Account</h3>
 <p>Go to the <a href="<%= new_user_registration_path %>">Sign Up</a> page.  User accounts can be created 
 using existing accounts on Coursera, Facebook or Twitter.
 
-<h4>Twitter</h4><p>You will be directed to your Twitter account to authorize OSUStreetSeen.  You will then be redirected back 
+<h4>Twitter</h4><p>You will be directed to your Twitter account to authorize StreetSeen.  You will then be redirected back 
 to StreetSeen, where you will be prompted to enter a valid email address.  StreetSeen usernames 
 will be displayed throughout the site associated with user-generated content, so if you would like to change your user name, 
 you can also do so on this screen.  Click on Sign Up to finish the process.</p>
 
-<h4>Facebook</h4><p>You will be directed to your Facebook account to authorize OSUStreetSeen.  You will then be redirected back 
+<h4>Facebook</h4><p>You will be directed to your Facebook account to authorize StreetSeen.  You will then be redirected back 
 to StreetSeen, where you will be prompted to enter a valid email address.  StreetSeen usernames 
 will be displayed throughout the site associated with user-generated content, so if you would like to change your user name, 
 you can also do so on this screen.  Click on Sign Up to finish the process.</p>
@@ -23,18 +24,25 @@ username, email address and password.  StreetSeen usernames will be displayed th
 user-generated content. Then, click on Sign Up.</p>
 
 <h3>Create a Study</h3>
-<p>To create a study, you need to have an account and be logged in.  If you're not, <%= link_to "Go set one up or Log in", new_user_session_path %> and then come back.  We'll wait.</p>
-<p>Ok, to create our study we need to first create the question we want to ask, and then select a group of images to compare with each other.  To get started, click on Public Studies above and follow these steps:
+<p>To create a study, you need to have an account and be logged in.  If you're not, <%= link_to "go set one up or log in", new_user_session_path %> and then come back.  We'll wait.</p>
+<p>Ok, to create our study we need to first create the question we want to ask, and then select a group of images to compare with each other.  To get started, click on 
+Public Studies above and follow these steps:
 <ol>
-<li>At the bottom of the list of studies, click New Study</li>
-<li>Fill in a name and description</li>
-<li>Fill in the end of the question you'd like to ask in your study</li>
-<li>Click on Create Study.
-<li>Next we want to create an area...</li>
-<li></li>
-<li></li>
-<li></li>
+<li>At the bottom of the list of studies, click the Create a New Study button.</li>
+<li>Fill in a name and a description for your study.</li>
+<li>Fill in the Question for Voter.  This is the question you would like study participants to answer, choosing between two photos.</li>
+<li>Select whether or not you would like to Share your Research.  This cannot be changed once the study is created.</li>
+<li>Click on Create Study.</li>
 </ol>
-<h2>Add an Image Set</h2>
-<h2>Edit a Study</h2>
-<h2>View Results</h2>
+<p>Your study has been created, but isn't much use without images.  So, next we head to "Add Area to Study."
+<ol>
+<li>The controls on the Google Map on the right side of the window will allow you to zoom in and out and move around the map (click and drag to move).  
+* However, don't single click in the map until you've navigated to the desired area. *  </li>
+<li>Once you have located the desired area, we want to draw a polygon.  The study will pull images from inside that space.  Click once in the map to place the first point.</li>
+<li>Click at least two more times to make points for the corners of your polygon.  Keep clicking until the space has been defined.</li>  
+<li>Fill in a name and a description for the area.</li>
+<li>Fill in how many images you would like and how far apart they should be.</li>
+<li>At this point, you can click on Save and Return to Study, which will bring you to your study's home page. Or, you can opt to add another area, if you want the study to pull images from multiple areas.</li>
+</ol>
+<h3>Edit a Study</h3>
+<h3>View Results</h3>
