--- a/app/views/studies/_vote.html.erb
+++ b/app/views/studies/_vote.html.erb
@@ -5,7 +5,7 @@ image2 = image_tag(pair[1].image_url, :size => "570x370")
 %>
 <div class="row" id="display-question">
   <div class="span12 text-center">
-    <h3><%= h @study.question %>?</h3>
+    <h3><%= h @study.question %></h3>
   </div>
 </div>
 <div class="row text-center">
