fixed delete region

--- a/app/views/studies/curate.html.erb
+++ b/app/views/studies/curate.html.erb
@@ -48,7 +48,7 @@
     </p>
   </div>
   <div class="modal-footer">
-    <a id="delete_image" class="btn btn-primary cursor" onclick="curate.deleteRegion();">Confirm Delete</a>
+    <a id="delete_image" class="btn btn-primary cursor" onclick="curate.deleteRegion(<%= @region.id %>);">Confirm Delete</a>
     <a class="btn cursor" data-dismiss="modal" id="close_modal">Cancel</a>
   </div>
 </div>
