--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,19 @@
-<h1>Listing users</h1>
+<h1>Search Users</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Email</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.name %></td>
-    <td><%= user.email %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+<%= form_tag users_path, :method => 'get' do %>
+  <%= text_field_tag :q, params[:q], :placeholder => 'Search for a user', :autocomplete => 'off'%>
+  <button type="submit" class="btn btn-primary" >
+    <i class="icon-search icon-white"></i> Search
+  </button>
 <% end %>
-</table>
-
+<div id="search-results">
+  <%= render 'users/list', :users => @users  %>
+</div>
 <br />
-
-<%= link_to 'New User', new_user_path %>
+<!--
+<% if user_signed_in? %>
+  <button type="button" class="btn btn-primary" onclick="location.href = '<%= new_user_path %>'">
+    <i class="icon-plus-sign icon-white"></i> Create a New User
+  </button>
+<% end %>
+-->
