--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,6 +19,9 @@
         <b class="caret"></b>
       </a>
       <ul class="dropdown-menu">
+        <% if current_user.admin %>
+        <li><%= link_to 'Administer Users', '/users' %></li>
+        <% end %>
         <li><%= link_to t('.edit_profile'), edit_user_registration_path %></li>
         <li><%= link_to t('.logout'), destroy_user_session_path, method: :delete %></li>
       </ul>
