--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,20 +1,24 @@
 <table class="table table-striped table-hover">
   <tr>
-    <th><%= sortable_column "Username", :column => "username" %></th>
+    <th></th>
+    <th><%= sortable_column "Name", :column => "name" %></th>
+    <th><%= sortable_column "User", :column => "username" %></th>
     <th><%= sortable_column "Email", :column => "email" %></th>
     <th><%= sortable_column "Admin", :column => "admin" %></th>
-    <th></th>
-    <th></th>
+    <th># Studies</th>
   </tr>
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.username %></td>
+    <td><%= link_to 'Edit', edit_user_path(user) %></td>
+    <td><%= link_to user.name, user %></td>
+    <td><%= link_to user.username, user %></td>
     <td><%= user.email %></td>
     <td><% if user.admin %> Yes <% else %> No <% end %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
+    <td><%= user.studies.length %> </td>
   </tr>
 <% end %>
 </table>
+
+<%= will_paginate(@users) %>
 
