Lining up the bottom

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -120,7 +120,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   border-top: solid 2px $darkred;
   border-bottom: solid 2px $darkred;
   /* not sure about this, dealing with offset */
-  margin: 50px 0 0 0;
+  margin: 50px 0 0 20px;
   text-align: center;
   height: 70px;
   .container a {
@@ -151,7 +151,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #trio-bar {
   width: 100%;
   /* not sure about this, dealing with offset */
-  padding-left: 20px;
+  padding-left: 40px;
   margin-top: 10px;
   }
   
