--- a/app/assets/stylesheets/studies.css.scss
+++ b/app/assets/stylesheets/studies.css.scss
@@ -38,3 +38,8 @@
 .study-download-button {
   margin-top: 1em;
 }
+
+#panorama img {
+    border: none !important;
+    max-width: none !important;
+}
