--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,14 +1,25 @@
-<h2>Sign up</h2>
-<p> After reviewing our <%= link_to 'User Policy', policies_path %>, you can sign up using an account from
-one of the following providers:</p>
 
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign up with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
-  <% end -%>
-<% end -%>
-<br/><br/>
-<p>Or, create a new account by fill in the information below.  </p>
+
+<% if resource.password_required? %>
+  <h2>Sign up</h2>
+
+  <p> After reviewing our <%= link_to 'User Policy', policies_path %>, you can sign up using an account from
+  one of the following providers:</p>
+
+  <% if devise_mapping.omniauthable? %>
+    <% resource_class.omniauth_providers.each do |provider| %>
+      <%= link_to "Sign up with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
+    <% end %>
+  <% end %>
+
+  <br/><br/>
+  <p>Or, create a new account by fill in the information below.  </p>
+<% else %>
+  <h2>Complete Registration</h2>
+  <p>You have successfully authenticated with <strong><%= session['devise.user_attributes']['provider'] %></strong>.
+    <br />Complete your registration by filling out the following form.</p>
+<% end %>
+
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
@@ -21,7 +32,9 @@ one of the following providers:</p>
       <%= f.input :password_confirmation, :required => true %>
     <% end %>
   </div>
-  <%= recaptcha_tags %>
+  <% if f.object.password_required? %>
+    <%= recaptcha_tags %>
+  <% end %>
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
   </div>
