Beginning of help with video, more to come

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -235,6 +235,18 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
     color: $darkgray;
 }
 
+/* help */
+.help-links {
+  position: relative;
+  float: right;
+  background-color: $gray;
+  @include rounded-corners;
+  ul {
+   list-style: none;
+   } 
+}
+
+
 /* responsive */
 @media (max-width: 979px) {
   .navbar .brand{
