--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -59,7 +59,7 @@ user-generated content. Then, click on Sign Up.</p>
 <p>Users will be directed to add an area immediately after creating a study, but can also access this function through the Curate tab once a study has been created.</p>
 <ol>
 <li>The controls on the Google Map on the right side of the window will allow you to zoom in and out and move around the map (click and drag to move).  
-* However, don't single click in the map until you've navigated to the desired area. *  </li>
+<strong>However, do not single click in the map until you've navigated to the desired area.</strong></li>
 <li>Once you have located the desired area, we want to draw a polygon.  The study will pull images from inside that space.  Click once in the map to place the first point.</li>
 <li>Click at least two more times to make points for the corners of your polygon.  Keep clicking until the space has been defined.</li>  
 <li>Fill in a name and a description for the area.</li>
