Fixed location image url bug and study vote page skip link

--- a/app/views/studies/_vote.html.erb
+++ b/app/views/studies/_vote.html.erb
@@ -29,6 +29,6 @@ image2 = image_tag(pair[1].image_url, :size => "570x370")
 
 <div class="row">
   <div class="span12 skip-vote-row text-center">
-    <%= link_to 'Can\'t decide, let\'s skip this one.', :home %>
+    <%= link_to 'Can\'t decide, let\'s skip this one.', url_for() %>
   </div>
 </div>
