--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -52,14 +52,19 @@ user-generated content. Then, click on Sign Up.</p>
 <li>Fill in the Question for Voter.  This is the question you would like study participants to answer, choosing between two photos.</li>
 <li>Select whether or not you would like to Share your Research.  This cannot be changed once the study is created.</li>
 <li>Click on Create Study.</li>
+<li>A confirmation message will pop up indicating that your study has been successfully created and the Add Area 
+form is now visible.  Your study has been created, but isn't much use without images.  So, next, we need 
+to add some areas.</li>
 </ol>
-<p>Your study has been created, but isn't much use without images.  So, next, we need to add some areas.</p>
+<p></p>
 <a id="areas"></a><h3>Adding and Editing Areas</h3>
 <p>Areas are essential to studies.  An Area defines the geographic boundaries within which the application will pull images for a study.</p>
 <p>Users will be directed to add an area immediately after creating a study, but can also access this function through the Curate tab once a study has been created.</p>
 <ol>
 <li>The controls on the Google Map on the right side of the window will allow you to zoom in and out and move around the map (click and drag to move).  
-<strong>However, do not single click in the map until you've navigated to the desired area.</strong></li>
+However, do not single click in the map until you've navigated to the desired area.  (If you accidentally create 
+a point before you are ready, you can click the Back link at the bottom of the page, and then click on Add Area 
+in the top tabs).</li>
 <li>Once you have located the desired area, we want to draw a polygon.  The study will pull images from inside that space.  Click once in the map to place the first point.</li>
 <li>Click at least two more times to make points for the corners of your polygon.  Keep clicking until the space has been defined.</li>  
 <li>Fill in a name and a description for the area.</li>
