--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -36,24 +36,26 @@ and the future of the city. You can follow Dr. Evans-Cowley on Twitter
 <p><strong>Jason Little</strong> is the  Systems Engineer,  Engineering Computing Services 
 in the College of Engineering at the The Ohio State University.  He serves as the 
 technical lead for centralized web development within the College and is also pursuing his MBA 
-at the Fisher College of Business</p>
+at the Fisher College of Business.</p>
+<p><strong>Corey Hinshaw</strong> is a systems Developer/Engineer with the Ohio State University
+College of Engineering. His duties include software development, web design, systems 
+admiinistration, and consuming the office's excess caffine. You can drop him a line at 
+<a href="http://www.twitter.com/electrickite">@electrickite</a>.</p>
 <p><strong>Meghan Frazer</strong> is the Digital Resources Curator for the 
 Knowlton School of Architecture at The Ohio State University.  She manages the 
 school archives, the KSA Digital Library, and supports educational technology 
 efforts by working on projects like StreetSeen.  Her professional interests include 
 digital content preservation and data visualization. You can send tweets in her 
 direction using <a href="http://www.twitter.com/meghanfrazer">@meghanfrazer</a>.</p>
-<p><strong>Corey Hinshaw</strong> is a systems Developer/Engineer with the Ohio State University
-College of Engineering. His duties include software development, web design, systems 
-admiinistration, and consuming the office's excess caffine. You can drop him a line at 
-<a href="http://www.twitter.com/electrickite">@electrickite</a>.</p>
-<p><strong>Shaun Rowland</strong> bio coming soon</p>
+<p><strong>Shaun Rowland</strong>, Systems Manager in the Ohio State University Departement of Computer Science & Engineering,
+also provided support and testing for this project.</p>
 
 <h3>Credits</h3>
 <p>This project is based on the great work of Open Plans <a href="http://www.beautiful.st/">
 Beautiful Street Project</a> and MIT’s Media Lab <a href="http://pulse.media.mit.edu/">Place 
 Pulse Project</a>. Both of these open source projects provided their 
 code on GitHub and served as a foundation for the design of StreetSeen. </p>
-<p>In addition, the <a href="https://mooculus.osu.edu/">Mooculus</a> site, developed by 
-Jim Fowler of The Ohio State University, provided key reference for this project.</p>
+<p>In addition, the <a href="https://mooculus.osu.edu/">Mooculus</a> site developed by 
+Jim Fowler of The Ohio State University, and the <a href="http://digitalfirst.osu.edu">OSU Digital First</a> site 
+provided key reference for this project.</p>
 
