--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<h1>User: <%= @user.id %></h1>
+<h1>User: <%= @user.username %></h1>
 <p>
   <b>Name:</b>
   <%= @user.name %>
